// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaderboardConsent should render consent with loading button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardConsent
    copy={
      Object {
        "ctaLabel": "give me leaderboards",
        "ctaLabelSecondary": "no thanks",
        "heading": "turn on leaderboard?",
        "subheading": "We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.",
      }
    }
    isLoading={true}
    onAllowLeaderboard={[MockFunction]}
    onPrivacyPolicyPress={[MockFunction]}
    onRefuseConsent={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <YuText
          bold={true}
          style={
            Object {
              "fontSize": 60,
              "lineHeight": 80,
              "marginVertical": 40,
              "textAlign": "center",
            }
          }
        >
          turn on leaderboard?
        </YuText>,
        <YuText
          style={
            Object {
              "fontSize": 30,
              "lineHeight": 44,
              "marginHorizontal": 80,
              "textAlign": "center",
            }
          }
        >
          We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.
        </YuText>,
        <Button
          disabled={true}
          isLoading={true}
          label="give me leaderboards"
          onPress={[MockFunction]}
          type="Primary"
          wrapperStyle={
            Object {
              "marginVertical": 15,
            }
          }
        />,
        <Button
          label="no thanks"
          onPress={[MockFunction]}
          type="Secondary"
        />,
        <Button
          label="privacy notice"
          onPress={[MockFunction]}
          type="Link"
          wrapperStyle={
            Object {
              "marginTop": 54,
            }
          }
        />,
      ],
      "contentContainerStyle": Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": "turn on leaderboard?",
          "style": Object {
            "fontSize": 60,
            "lineHeight": 80,
            "marginVertical": 40,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "turn on leaderboard?",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.",
          "style": Object {
            "fontSize": 30,
            "lineHeight": 44,
            "marginHorizontal": 80,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": true,
          "isLoading": true,
          "label": "give me leaderboards",
          "onPress": [MockFunction],
          "type": "Primary",
          "wrapperStyle": Object {
            "marginVertical": 15,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "no thanks",
          "onPress": [MockFunction],
          "type": "Secondary",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "privacy notice",
          "onPress": [MockFunction],
          "type": "Link",
          "wrapperStyle": Object {
            "marginTop": 54,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [MockFunction],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 60,
                "lineHeight": 80,
                "marginVertical": 40,
                "textAlign": "center",
              }
            }
          >
            turn on leaderboard?
          </YuText>,
          <YuText
            style={
              Object {
                "fontSize": 30,
                "lineHeight": 44,
                "marginHorizontal": 80,
                "textAlign": "center",
              }
            }
          >
            We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.
          </YuText>,
          <Button
            disabled={true}
            isLoading={true}
            label="give me leaderboards"
            onPress={[MockFunction]}
            type="Primary"
            wrapperStyle={
              Object {
                "marginVertical": 15,
              }
            }
          />,
          <Button
            label="no thanks"
            onPress={[MockFunction]}
            type="Secondary"
          />,
          <Button
            label="privacy notice"
            onPress={[MockFunction]}
            type="Link"
            wrapperStyle={
              Object {
                "marginTop": 54,
              }
            }
          />,
        ],
        "contentContainerStyle": Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "turn on leaderboard?",
            "style": Object {
              "fontSize": 60,
              "lineHeight": 80,
              "marginVertical": 40,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "turn on leaderboard?",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.",
            "style": Object {
              "fontSize": 30,
              "lineHeight": 44,
              "marginHorizontal": 80,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": true,
            "isLoading": true,
            "label": "give me leaderboards",
            "onPress": [MockFunction],
            "type": "Primary",
            "wrapperStyle": Object {
              "marginVertical": 15,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "no thanks",
            "onPress": [MockFunction],
            "type": "Secondary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "privacy notice",
            "onPress": [MockFunction],
            "type": "Link",
            "wrapperStyle": Object {
              "marginTop": 54,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [MockFunction],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LeaderboardConsent should render default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardConsent
    copy={
      Object {
        "ctaLabel": "give me leaderboards",
        "ctaLabelSecondary": "no thanks",
        "heading": "turn on leaderboard?",
        "subheading": "We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.",
      }
    }
    isLoading={false}
    onAllowLeaderboard={[MockFunction]}
    onPrivacyPolicyPress={[MockFunction]}
    onRefuseConsent={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <YuText
          bold={true}
          style={
            Object {
              "fontSize": 60,
              "lineHeight": 80,
              "marginVertical": 40,
              "textAlign": "center",
            }
          }
        >
          turn on leaderboard?
        </YuText>,
        <YuText
          style={
            Object {
              "fontSize": 30,
              "lineHeight": 44,
              "marginHorizontal": 80,
              "textAlign": "center",
            }
          }
        >
          We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.
        </YuText>,
        <Button
          disabled={false}
          isLoading={false}
          label="give me leaderboards"
          onPress={[MockFunction]}
          type="Primary"
          wrapperStyle={
            Object {
              "marginVertical": 15,
            }
          }
        />,
        <Button
          label="no thanks"
          onPress={[MockFunction]}
          type="Secondary"
        />,
        <Button
          label="privacy notice"
          onPress={[MockFunction]}
          type="Link"
          wrapperStyle={
            Object {
              "marginTop": 54,
            }
          }
        />,
      ],
      "contentContainerStyle": Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": "turn on leaderboard?",
          "style": Object {
            "fontSize": 60,
            "lineHeight": 80,
            "marginVertical": 40,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "turn on leaderboard?",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.",
          "style": Object {
            "fontSize": 30,
            "lineHeight": 44,
            "marginHorizontal": 80,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "isLoading": false,
          "label": "give me leaderboards",
          "onPress": [MockFunction],
          "type": "Primary",
          "wrapperStyle": Object {
            "marginVertical": 15,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "no thanks",
          "onPress": [MockFunction],
          "type": "Secondary",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "privacy notice",
          "onPress": [MockFunction],
          "type": "Link",
          "wrapperStyle": Object {
            "marginTop": 54,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [MockFunction],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <YuText
            bold={true}
            style={
              Object {
                "fontSize": 60,
                "lineHeight": 80,
                "marginVertical": 40,
                "textAlign": "center",
              }
            }
          >
            turn on leaderboard?
          </YuText>,
          <YuText
            style={
              Object {
                "fontSize": 30,
                "lineHeight": 44,
                "marginHorizontal": 80,
                "textAlign": "center",
              }
            }
          >
            We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.
          </YuText>,
          <Button
            disabled={false}
            isLoading={false}
            label="give me leaderboards"
            onPress={[MockFunction]}
            type="Primary"
            wrapperStyle={
              Object {
                "marginVertical": 15,
              }
            }
          />,
          <Button
            label="no thanks"
            onPress={[MockFunction]}
            type="Secondary"
          />,
          <Button
            label="privacy notice"
            onPress={[MockFunction]}
            type="Link"
            wrapperStyle={
              Object {
                "marginTop": 54,
              }
            }
          />,
        ],
        "contentContainerStyle": Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "turn on leaderboard?",
            "style": Object {
              "fontSize": 60,
              "lineHeight": 80,
              "marginVertical": 40,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "turn on leaderboard?",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.",
            "style": Object {
              "fontSize": 30,
              "lineHeight": 44,
              "marginHorizontal": 80,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "We enjoy a bit of friendly competition. By turning on leaderboards, others within your organisation or workspace will be able to see summary details of your activity.  You’ll be able to stop sharing your activity at any time in your settings.",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "isLoading": false,
            "label": "give me leaderboards",
            "onPress": [MockFunction],
            "type": "Primary",
            "wrapperStyle": Object {
              "marginVertical": 15,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "no thanks",
            "onPress": [MockFunction],
            "type": "Secondary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "privacy notice",
            "onPress": [MockFunction],
            "type": "Link",
            "wrapperStyle": Object {
              "marginTop": 54,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [MockFunction],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
